force-app/main/default/objects/Return_Order__c/Return_Order__c.object-meta.xml
<CustomObject>
    <label>Return Order</label>
    <pluralLabel>Return Orders</pluralLabel>
    <nameField>
        <label>Return Order Number</label>
        <displayFormat>RO-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Sales return header for tracking product returns with reason categorization and credit note processing (MOD-05 Order Management)</description>
</CustomObject>