force-app/main/default/objects/Return_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Return Orders</relationshipLabel>
    <relationshipName>Return_Orders</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>