force-app/main/default/objects/Return_Order__c/fields/Credit_Note_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Number__c</fullName>
    <label>Credit Note Number</label>
    <type>Text</type>
    <length>50</length>
</CustomField>