force-app/main/default/objects/Return_Order__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Return Orders</relationshipLabel>
    <relationshipName>Return_Orders_From_Invoice</relationshipName>
    <type>Lookup</type>
</CustomField>