force-app/main/default/objects/Return_Order__c/fields/Invoice_Line__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Line</label>
    <referenceTo>Invoice_Line__c</referenceTo>
    <relationshipLabel>Return Orders</relationshipLabel>
    <relationshipName>Return_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>