force-app/main/default/objects/Return_Order__c/fields/Original_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Original_Invoice__c</fullName>
    <label>Original Invoice</label>
    <type>Lookup</type>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Return Orders</relationshipLabel>
    <relationshipName>Return_Orders</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>