force-app/main/default/objects/Return_Order__c/fields/Return_Amount__c.field-meta.xml
<CustomField>
    <fullName>Return_Amount__c</fullName>
    <label>Return Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>