force-app/main/default/objects/Return_Order__c/fields/Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Date__c</fullName>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>