force-app/main/default/objects/Return_Order__c/fields/Return_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Return_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Return Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>