force-app/main/default/objects/Return_Order__c/fields/Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Salesperson__c</fullName>
    <label>Salesperson</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Return Orders</relationshipLabel>
    <relationshipName>Return_Orders</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>