force-app/main/default/objects/Return_Order__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Territorys</relationshipLabel>
    <relationshipName>Territory</relationshipName>
    <type>Lookup</type>
</CustomField>