force-app/main/default/objects/Return_Order__c/fields/Total_Return_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Return_Amount__c</fullName>
    <label>Total Return Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>