force-app/main/default/objects/Return_Order__c/fields/Total_Return_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Return_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Return Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>