force-app/main/default/objects/Return_Order__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <label>Visit</label>
    <type>Lookup</type>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Return Orders</relationshipLabel>
    <relationshipName>Return_Orders</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>