force-app/main/default/objects/Return_Order__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Warehouses</relationshipLabel>
    <relationshipName>Warehouse</relationshipName>
    <type>Lookup</type>
</CustomField>